--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/sofiabogdanova/bmi-calculator#readme",
   "devDependencies": {
+    "@types/node": "^14.14.19",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
